# slg-sentinel

./: .gitignore  .gitmodules  CLAUDE.md  Gemini.md  README.md  SLG Sentinel 工程规格书 v2（双模架构 + GitHub Actions）.docx  app.py  copilot.txt  keywords.yaml  pyproject.toml  requirements.txt  sop.sh  spec.txt  spider_slg_full.py  targets.yaml
.github/workflows/: crawl-bilibili.yml  crawl-taptap.yml  crawl-youtube.yml  weekly-analysis.yml
.streamlit/: config.toml
cloudflare_pages/: index.html
data/: taptap_full_slg_corpus.json
data/recursive_runs/: 20260424_235247_bilibili_9223c9e3.json
data/runtime/: 20260424_235247_bilibili_round_1_keywords.yaml  20260424_235249_bilibili_round_1_keywords.yaml  20260424_235251_bilibili_round_1_keywords.yaml  20260424_235253_bilibili_round_1_keywords.yaml  20260424_235254_bilibili_round_1_keywords.yaml  20260424_235256_bilibili_round_1_keywords.yaml  20260424_235258_bilibili_round_1_keywords.yaml  20260424_235300_bilibili_round_1_keywords.yaml  20260424_235302_bilibili_round_1_keywords.yaml  20260424_235303_bilibili_round_1_keywords.yaml  20260424_235305_bilibili_round_1_keywords.yaml  20260424_235306_bilibili_round_1_keywords.yaml  20260424_235308_bilibili_round_1_keywords.yaml  (+11 more)
reports/: 2026-04-17_weekly_report.json  2026-04-17_weekly_report.md
src/: __main__.py  cli.py
src/adapters/: base.py  bilibili.py  (+3 more)
tests/: test_adapters.py  test_core.py  test_llm_client.py  test_profiler.py  test_recursive_graph.py  test_recursive_insights.py  test_recursive_runs.py  test_weekly_report.py
ui/: __init__.py  i18n.py  locales.toml
(+67 files in other folders)
